--- a/user_superadmin/md_komisi.html
+++ b/user_superadmin/md_komisi.html
@@ -129,6 +129,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Master Data</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_kategori_treatment.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kategori Treatment</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_treatment.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Treatment</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_complaint.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Complaint</span></a></li>
 											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_superadmin/md_komisi.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Komisi</span></a></li>
