--- a/user_superadmin/customer.html
+++ b/user_superadmin/customer.html
@@ -348,6 +348,32 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
+                            <div class="row row-centered">
+
+								<div class="col-12">
+
+                                    <!--begin::Portlet-->
+									<div class="kt-portlet">
+										<div class="kt-portlet__head">
+											<div class="kt-portlet__head-label">
+												<span class="kt-portlet__head-icon">
+													<i class="flaticon2-user-outline-symbol"></i>
+												</span>
+												<h3 class="kt-portlet__head-title">
+													Customer
+												</h3>
+											</div>
+										</div>
+										<div class="kt-portlet__body">
+                                            <table class="table table-bordered table-hover table-checkable" id="table_customer"></table>
+										</div>
+									</div>
+
+									<!--end::Portlet-->
+								</div>
+
+							</div>
+
 						</div>
 
 						<!-- end:: Content -->
@@ -417,10 +443,12 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Global Theme Bundle -->
 
 		<!--begin::Page Vendors(used by this page) -->
+		<script src="assets/plugins/custom/datatables/datatables.bundle.js" type="text/javascript"></script>
 
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
+		<script src="assets/js/script/datatable_superadmin.js" type="text/javascript"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
 		<!--end::Page Scripts -->
