--- a/user_gudang/profile_payroll_pinjaman.html
+++ b/user_gudang/profile_payroll_pinjaman.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Detail Request Stock | Gudang Fabulash</title>
+		<title>Pinjaman | Gudang Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -148,7 +148,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_gudang/request_stock.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item" aria-haspopup="true"><a href="user_gudang/request_stock.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect id="bound" x="0" y="0" width="24" height="24"/>
 								        <path d="M10.9,2 C11.4522847,2 11.9,2.44771525 11.9,3 C11.9,3.55228475 11.4522847,4 10.9,4 L6,4 C4.8954305,4 4,4.8954305 4,6 L4,18 C4,19.1045695 4.8954305,20 6,20 L18,20 C19.1045695,20 20,19.1045695 20,18 L20,16 C20,15.4477153 20.4477153,15 21,15 C21.5522847,15 22,15.4477153 22,16 L22,18 C22,20.209139 20.209139,22 18,22 L6,22 C3.790861,22 2,20.209139 2,18 L2,6 C2,3.790861 3.790861,2 6,2 L10.9,2 Z" id="Path-57" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -162,7 +162,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								        <path d="M10.3144829,18.7082217 C8.08859955,17.8189707 5.31710038,17.2495635 1.99998542,17 C1.99998542,16.9325178 1.99998542,13.1012863 1.99998542,5.50630526 L2.00000925,5.50630526 C2.00000925,5.23017604 2.22385621,5.00632908 2.49998542,5.00632908 C2.50420375,5.00632908 2.5084219,5.00638247 2.51263888,5.00648922 C5.34175439,5.07811173 8.17086991,5.74261533 10.9999854,7 C10.9999854,7.04449645 10.9999854,10.79246 10.9999854,18.2438906 L11,18.2438906 C11,18.520041 10.7761358,18.7439052 10.4999854,18.7439052 C10.4364457,18.7439052 10.3734882,18.7317946 10.3144829,18.7082217 Z" fill="#000000" opacity="0.3"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">Library</span></a></li>
-								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
 								        <path d="M12,11 C9.790861,11 8,9.209139 8,7 C8,4.790861 9.790861,3 12,3 C14.209139,3 16,4.790861 16,7 C16,9.209139 14.209139,11 12,11 Z" id="Mask" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -173,7 +173,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_gudang/profile_biodata.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Biodata</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_gudang/profile_kehadiran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kehadiran</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_gudang/profile_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Payroll</span></a></li>
+											<li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_gudang/profile_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Payroll</span></a></li>
 										</ul>
 									</div>
 								</li>
@@ -293,14 +293,17 @@ License: You must have a valid license purchased only from themeforest(the above
 						<div class="kt-subheader  kt-grid__item" id="kt_subheader">
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
-                                    <h3 class="kt-subheader__title">
-										Request Stock </h3>
+									<h3 class="kt-subheader__title">
+										Profile </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_gudang/request_stock.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_gudang/profile_payroll.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_gudang/request_stock_detail_request.html" class="kt-subheader__breadcrumbs-link">
-											Detail request stock </a>
+										<a href="user_gudang/profile_payroll.html" class="kt-subheader__breadcrumbs-link">
+											Payroll </a>
+                                        <span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_gudang/profile_payroll_pinjaman.html" class="kt-subheader__breadcrumbs-link">
+											Pinjaman </a>
 									</div>
 								</div>
 							</div>
@@ -311,7 +314,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
                         <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-                            <div class="row justify-content-center">
+                            <div class="row row-centered">
 
 								<div class="col-12">
 
@@ -323,58 +326,79 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													New Request
+													Pinjaman
 												</h3>
+											</div>
+                                            <div class="kt-portlet__head-toolbar">
+												<ul class="nav nav-pills" role="tablist">
+													<li class="nav-item">
+														<a class="nav-link active" data-toggle="tab" href="#tab-request" role="tab" aria-selected="true">
+															Request Pinjaman
+														</a>
+													</li>
+													<li class="nav-item">
+														<a class="nav-link" data-toggle="tab" href="#tab-list" role="tab" aria-selected="false">
+															List Request Pinjaman
+														</a>
+													</li>
+													<li class="nav-item">
+														<a class="nav-link" data-toggle="tab" href="#tab-current" role="tab" aria-selected="false">
+															Pinjaman Saat Ini
+														</a>
+													</li>
+												</ul>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <div class="row" style="margin-bottom: 50px;">
-												<div class="col-12 kt-margin-b-20">
-	                                                <h5 class="color-main-dark" name="kode_request">#123456</h5>
-	                                                <span class="kt-font-bold"name="studio_request">Studio Cabang Dg Tata</span>
+											<div class="tab-content">
+												<div class="tab-pane active" id="tab-request" role="tabpanel">
+													<form id="kt_form_pinjaman">
+	                                                    <div class="row justify-content-center">
+															<div class="col-lg-8 kt-margin-b-10">
+	                                                            <div class="form-group row">
+	            													<label for="example-text-input" class="col-sm-3 col-form-label">Nama</label>
+	            													<div class="col-sm-9">
+	            														<input type="text" class="form-control" name="pinjaman_nama" placeholder="Nama">
+	            													</div>
+	            												</div>
+	                                                            <div class="form-group row">
+	            													<label for="example-text-input" class="col-sm-3 col-form-label">Nominal</label>
+	            													<div class="col-sm-9">
+	            														<input type="text" class="form-control" name="pinjaman_nominal" placeholder="Nominal">
+	            													</div>
+	            												</div>
+	                                                            <div class="form-group row">
+	            													<label for="example-text-input" class="col-sm-3 col-form-label">Termin Pembayaran</label>
+	            													<div class="col-sm-9">
+																		<div class="input-group">
+																			<input type="text" class="form-control" name="pinjaman_termin" placeholder="Termin Pembayaran">
+																			<div class="input-group-append"><span class="input-group-text">Bulan</span></div>
+																		</div>
+																		<span class="form-text text-muted kt-hidden" style="margin:0px;"></span>
+	            													</div>
+	            												</div>
+	                                                            <div class="form-group row">
+	            													<label for="example-text-input" class="col-sm-3 col-form-label">Notes</label>
+	            													<div class="col-sm-9">
+	            														<textarea class="form-control" rows="3" name="pinjaman_notes" placeholder="Notes"></textarea>
+	            													</div>
+	            												</div>
+	                                                        </div>
+	                                                        <div class="col-lg-12">
+	                                                            <div style="text-align: center;">
+	                                                                <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil">Submit</button>&nbsp;
+	                                                            </div>
+	                                                        </div>
+	                                                    </div>
+													</form>
 												</div>
-												<div class="col-4" style="padding-right:0px;">
-	                                                <span class="kt-font-bold">Date Request : <span name="date_request">15 November 2019</span></span>
+												<div class="tab-pane" id="tab-list" role="tabpanel">
+		                                            <table class="table table-bordered table-hover table-checkable" id="table_pinjaman_list_request"></table>
 												</div>
-												<div class="col-4" style="padding-left:0px; padding-right:0px; text-align:center;">
-	                                                <span class="kt-font-bold">Date Terkirim : <span name="date_approve">-</span></span>
+												<div class="tab-pane" id="tab-current" role="tabpanel">
+													<table class="table table-bordered table-hover table-checkable" id="table_pinjaman_current"></table>
 												</div>
-												<div class="col-4" style="padding-left:0px;text-align:right;">
-	                                                <span class="kt-font-bold">Date Diterima : <span name="date_approve">-</span></span>
-												</div>
-                                            </div>
-                                            <div class="justify-center kt-margin-b-20">
-                                                <span class="kt-margin-10 kt-font-bold kt-font-brand">Request</span><i class="flaticon2-next" style="padding: 10px 0px;"></i>
-                                                <span class="kt-margin-10">Terkirim</span><i class="flaticon2-next" style="padding: 10px 0px;"></i>
-                                                <span class="kt-margin-10">Diterima</span>
-                                            </div>
-											<form id="kt_form_request_barang">
-												<div class="kt-margin-b-20">
-													<label class="kt-margin-b-15" style="font-size: 1rem;font-weight: 400;">Item List : </label>
-													<div class="table-responsive">
-														<table class="table table-bordered table-hover well-align-table table-mobile" role="grid" id="table_request_stock_detail_request">
-															<thead>
-			                                                    <tr role="row">
-			                                                        <th style="width: 5%">No</th>
-			                                                        <th style="width: 25%">Barang</th>
-			                                                        <th style="width: 15%">Satuan</th>
-			                                                        <th style="width: 12.5%">Request</th>
-			                                                        <th style="width: 12.5%">Terkirim</th>
-			                                                        <th style="width: 12.5%">Diterima</th>
-			                                                        <th style="width: 17.5%">Margin Hilang</th>
-			                                                    </tr>
-			                                                </thead>
-			                                            </table>
-													</div>
-												</div>
-												<div class="form-group form-group-last">
-													<label class="kt-margin-b-15" for="request_notes">Notes: </label>
-													<textarea class="form-control readonly" id="request_notes" name="request_notes" rows="3" readonly>Lorem ipsum dolor sit amet</textarea>
-												</div>
-	                                            <div style="text-align: center; margin-top: 30px">
-	                                                <button type="submit" class="btn btn-success" id="kt_sweetalert_request_berhasil">Submit</button>
-	                                            </div>
-											</form>
+											</div>
 										</div>
 									</div>
 
@@ -460,28 +484,33 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/script/datatable_gudang.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
-		<script>
+        <script>
 			// Form validation
-			jQuery.extend(jQuery.validator.messages, {
-			    required : "Required"
-			});
-
-			$('#kt_form_request_barang').on('submit', function(event) {
-				$('.request_required').each(function (item) {
-					$(this).rules('add', {
+			$("#kt_form_pinjaman").validate({
+				// define validation rules
+				rules : {
+					pinjaman_nama : {
 						required: true
-					})
-				});
-				event.preventDefault();
+					},
+					pinjaman_nominal : {
+						required: true,
+						digits: true
+					},
+					pinjaman_termin : {
+						required: true,
+						digits: true
+					},
+					pinjaman_notes : {
+						required: true
+					}
+				}
 			});
 
-			$('#kt_form_request_barang').validate();
-
-            //Sweetalert
-            $('#kt_sweetalert_request_berhasil').click(function(e) {
+			// Sweetalert
+			$('#kt_sweetalert_berhasil').click(function(e) {
 				swal.fire({
 					title: "Berhasil",
-					text: "Request berhasil diterima",
+					text: "Request pinjaman berhasil dilakukan.",
 					type: "success",
 					confirmButtonText: "Ok",
 					confirmButtonClass: "btn btn-brand"
@@ -489,7 +518,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					// location.reload();
 				});
 			});
-        </script>
+		</script>
 
 		<!--end::Page Scripts -->
 	</body>
