--- a/user_gudang/request_stock.html
+++ b/user_gudang/request_stock.html
@@ -173,6 +173,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_gudang/profile_biodata.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Biodata</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_gudang/profile_kehadiran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kehadiran</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_gudang/profile_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Payroll</span></a></li>
 										</ul>
 									</div>
 								</li>
