Superadmin finance pemasukan dan pengeluaran

--- a/user_superadmin/inventory_therapist.html
+++ b/user_superadmin/inventory_therapist.html
@@ -199,6 +199,8 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Finance</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_pengeluaran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pengeluaran</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_pemasukan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pemasukan</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_pinjaman.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">List Pinjaman</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">List Payroll</span></a></li>
 										</ul>
@@ -369,14 +371,12 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <div class="row justify-content-center kt-margin-0">
-                                                <select class="col-md-8 col-12 col-lg-6 form-control" name="inventory_therapist" id="inventory_therapist">
-                                                    <option disabled selected>Choose Therapist</option>
-                                                    <option>Ica</option>
-                                                    <option>Vega</option>
-                                                    <option>Darnila</option>
-                                                </select>
-                                            </div>
+											<select class="col-sm-12 kt-margin-b-20 form-control" name="inventory_studio" id="inventory_studio">
+												<option disabled selected>Choose Therapist</option>
+												<option>Ica</option>
+												<option>Vega</option>
+												<option>Darnila</option>
+											</select>
                                             <table class="table table-bordered table-hover table-checkable" id="table_inventory_therapist"></table>
 										</div>
 									</div>
