--- a/user_superadmin/finance_pengeluaran.html
+++ b/user_superadmin/finance_pengeluaran.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Master Data Treatment | Superadmin Fabulash</title>
+		<title>Pengeluaran | Superadmin Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -120,7 +120,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<path d="M11.0563554,18.6706981 L5.33593024,14.122919 C4.94553994,13.8125559 4.37746707,13.8774308 4.06710397,14.2678211 C4.06471678,14.2708238 4.06234874,14.2738418 4.06,14.2768747 L4.06,14.2768747 C3.75257288,14.6738539 3.82516916,15.244888 4.22214834,15.5523151 C4.22358765,15.5534297 4.2250303,15.55454 4.22647627,15.555646 L11.0872776,20.8031356 C11.6250734,21.2144692 12.371757,21.2145375 12.909628,20.8033023 L19.7677785,15.559828 C20.1693192,15.2528257 20.2459576,14.6784381 19.9389553,14.2768974 C19.9376429,14.2751809 19.9363245,14.2734691 19.935,14.2717619 L19.935,14.2717619 C19.6266937,13.8743807 19.0546209,13.8021712 18.6572397,14.1104775 C18.654352,14.112718 18.6514778,14.1149757 18.6486172,14.1172508 L12.9235044,18.6705218 C12.377022,19.1051477 11.6029199,19.1052208 11.0563554,18.6706981 Z" id="Path" fill="#000000" opacity="0.3" />
 									</g>
 								</svg></span><span class="kt-menu__link-text">Dashboard</span></a></li>
-								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <polygon points="0 0 24 0 24 24 0 24"/>
 								        <path d="M4.85714286,1 L11.7364114,1 C12.0910962,1 12.4343066,1.12568431 12.7051108,1.35473959 L17.4686994,5.3839416 C17.8056532,5.66894833 18,6.08787823 18,6.52920201 L18,19.0833333 C18,20.8738751 17.9795521,21 16.1428571,21 L4.85714286,21 C3.02044787,21 3,20.8738751 3,19.0833333 L3,2.91666667 C3,1.12612489 3.02044787,1 4.85714286,1 Z M8,12 C7.44771525,12 7,12.4477153 7,13 C7,13.5522847 7.44771525,14 8,14 L15,14 C15.5522847,14 16,13.5522847 16,13 C16,12.4477153 15.5522847,12 15,12 L8,12 Z M8,16 C7.44771525,16 7,16.4477153 7,17 C7,17.5522847 7.44771525,18 8,18 L11,18 C11.5522847,18 12,17.5522847 12,17 C12,16.4477153 11.5522847,16 11,16 L8,16 Z" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
@@ -130,7 +130,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_kategori_treatment.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Kategori Treatment</span></a></li>
-											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_superadmin/md_treatment.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Treatment</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_treatment.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Treatment</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_complaint.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Complaint</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_komisi.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Komisi</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_studio.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Studio</span></a></li>
@@ -188,7 +188,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect id="bound" x="0" y="0" width="24" height="24"/>
 								        <rect id="Rectangle-62-Copy" fill="#000000" opacity="0.3" x="12" y="4" width="3" height="13" rx="1.5"/>
@@ -198,8 +198,8 @@ License: You must have a valid license purchased only from themeforest(the above
 								    </g>
 								</svg></span><span class="kt-menu__link-text">Finance</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
-										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_pengeluaran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pengeluaran</span></a></li>
+                                        <ul class="kt-menu__subnav">
+                                            <li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_superadmin/finance_pengeluaran.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pengeluaran</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_pemasukan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pemasukan</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_pinjaman.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">List Pinjaman</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/finance_payroll.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">List Payroll</span></a></li>
@@ -337,13 +337,13 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Master Data </h3>
+										Finance </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_superadmin/md_treatment.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_superadmin/finance_pengeluaran.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_superadmin/md_treatment.html" class="kt-subheader__breadcrumbs-link">
-											Treatment </a>
+										<a href="user_superadmin/finance_pengeluaran.html" class="kt-subheader__breadcrumbs-link">
+											Pengeluaran </a>
 									</div>
 								</div>
 							</div>
@@ -352,7 +352,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- end:: Content Head -->
 
 						<!-- begin:: Content -->
-						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+                        <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
                             <div class="row row-centered">
 
@@ -363,100 +363,42 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
 												<span class="kt-portlet__head-icon">
-													<i class="flaticon2-cube-1"></i>
+													<i class="flaticon2-graph"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Treatment
+													Pengeluaran
 												</h3>
-											</div>
-                                            <div class="kt-portlet__head-toolbar">
-												<button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_tambah_treatment"><i class="flaticon-plus" style="color: white;"></i> Tambah Treatment</button>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <table class="table table-bordered table-hover table-checkable" id="table_data_treatment"></table>
+											<select class="col-sm-12 kt-margin-b-20 form-control" name="inventory_studio" id="inventory_studio">
+												<option disabled selected>Choose Studio</option>
+												<option>Studio A</option>
+												<option>Studio B</option>
+												<option>Studio C</option>
+											</select>
+											<form class="kt-margin-b-5">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_finance_pengeluaran"/>
+														<div class="input-group-append">
+															<span class="input-group-text">
+																<i class="la la-calendar"></i>
+															</span>
+														</div>
+													</div>
+													<div class="col-lg-4 col-sm-6">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_finance_pengeluaran">
+													</div>
+    											</div>
+    										</form>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_finance_pengeluaran"></table>
 										</div>
 									</div>
 
 									<!--end::Portlet-->
 								</div>
 
-							</div>
-
-							<div class="modal fade" id="kt_modal_tambah_treatment" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-								<div class="modal-dialog" role="document">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h5 class="modal-title" id="exampleModalLabel">Tambah Treatment</h5>
-											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-											</button>
-										</div>
-										<form id="kt_form_tambah_treatment">
-											<div class="modal-body">
-												<div class="form-group row">
-													<label class="col-sm-4 col-form-label">Nama Treatment :</label>
-													<div class="col-sm-8">
-														<input type="text" class="form-control" name="treatment_nama" placeholder="Nama Treatment">
-													</div>
-												</div>
-												<div class="form-group row">
-													<label class="col-sm-4 col-form-label">Kategori :</label>
-													<div class="col-sm-8">
-														<input type="text" class="form-control" name="treatment_kategori" placeholder="Kategori">
-													</div>
-												</div>
-												<div class="form-group row">
-													<label class="col-sm-4 col-form-label">Harga :</label>
-													<div class="col-sm-8">
-														<input type="text" class="form-control" name="treatment_harga" placeholder="Harga">
-													</div>
-												</div>
-											</div>
-											<div class="modal-footer" style="justify-content:center;">
-												<button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
-												<button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_tambah">Submit</button>
-											</div>
-										</form>
-									</div>
-								</div>
-							</div>
-
-							<div class="modal fade" id="kt_modal_edit_treatment" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-								<div class="modal-dialog" role="document">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h5 class="modal-title" id="exampleModalLabel">Edit Treatment</h5>
-											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-											</button>
-										</div>
-										<form id="kt_form_edit_treatment">
-											<div class="modal-body">
-												<div class="form-group row">
-													<label class="col-sm-4 col-form-label">Nama Treatment :</label>
-													<div class="col-sm-8">
-														<input type="text" class="form-control" name="treatment_nama_edit" placeholder="Nama Treatment" value="Eyelash Extension">
-													</div>
-												</div>
-												<div class="form-group row">
-													<label class="col-sm-4 col-form-label">Kategori :</label>
-													<div class="col-sm-8">
-														<input type="text" class="form-control" name="treatment_kategori_edit" placeholder="Kategori" value="Eyelash">
-													</div>
-												</div>
-												<div class="form-group row">
-													<label class="col-sm-4 col-form-label">Harga :</label>
-													<div class="col-sm-8">
-														<input type="text" class="form-control" name="treatment_harga_edit" placeholder="Harga" value="Rp 350.000,00">
-													</div>
-												</div>
-											</div>
-											<div class="modal-footer" style="justify-content:center;">
-												<button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
-												<button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_edit">Submit</button>
-											</div>
-										</form>
-									</div>
-								</div>
 							</div>
 
 						</div>
@@ -535,80 +477,6 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_superadmin.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
-
-		<script>
-            // Sweetalert
-            var swalDelete = function () {
-                swal.fire({
-                    title: 'Yakin untuk menghapus?',
-                    text: "Tindakan ini tidak bisa diubah kembali!",
-                    type: 'warning',
-                    showCancelButton: true,
-                    confirmButtonText: 'Ya, hapus!'
-                }).then(function(result) {
-                    if (result.value) {
-                        swal.fire(
-                            'Terhapus!',
-                            'Data berhasil dihapus.',
-                            'success'
-                        )
-                    }
-                });
-            };
-
-			$('#kt_sweetalert_berhasil_tambah').click(function(e) {
-				swal.fire({
-					title: "Berhasil",
-					text: "Data berhasil ditambahkan.",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
-				}).then(function(result) {
-					// location.reload();
-				});
-			});
-
-			$('#kt_sweetalert_berhasil_edit').click(function(e) {
-				swal.fire({
-					title: "Berhasil",
-					text: "Pembaruan data berhasil dilakukan.",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
-				}).then(function(result) {
-					// location.reload();
-				});
-			});
-
-			// Form Validation
-			$('#kt_form_tambah_treatment').validate({
-				rules : {
-					treatment_nama : {
-						required: true
-					},
-					treatment_kategori : {
-						required: true
-					},
-                    treatment_harga : {
-						required: true
-					}
-				}
-			});
-
-			$('#kt_form_edit_treatment').validate({
-				rules : {
-					treatment_nama_edit : {
-						required: true
-					},
-					treatment_kategori_edit : {
-						required: true
-					},
-                    treatment_harga_edit : {
-						required: true
-					}
-				}
-			});
-        </script>
 
 		<!--end::Page Scripts -->
 	</body>
