Admin tambahan button edit untuk invoice treatment paid. superadmin, supervisor studio & admin button print treatment done

--- a/user_admin/listTreatment_detail_done.html
+++ b/user_admin/listTreatment_detail_done.html
@@ -432,6 +432,9 @@ License: You must have a valid license purchased only from themeforest(the above
 																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
 																</div>
 																<div class="col-12" style="text-align: right; margin-bottom:5px;">
+																	<button class="col-5 btn btn-success no-print">Edit</button>
+																</div>
+																<div class="col-12" style="text-align: right; margin-bottom:5px;">
 																	<button class="col-5 btn btn-danger no-print" id="kt_sweetalert_void">Void</button>
 																</div>
 															</div>
