--- a/user_admin/listTreatment_detail_paid.html
+++ b/user_admin/listTreatment_detail_paid.html
@@ -378,6 +378,13 @@ License: You must have a valid license purchased only from themeforest(the above
 			                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 			                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 														</div>
+														<div class="col-6">
+															<div class="row">
+																<div class="col-12" style="text-align: right; margin-bottom:5px;">
+																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
+																</div>
+															</div>
+														</div>
 		                                            </div>
 		                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
 		                                                <tr>
