--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -385,6 +385,11 @@ License: You must have a valid license purchased only from themeforest(the above
 														</a>
 													</li>
 													<li class="nav-item">
+														<a class="nav-link" data-toggle="tab" href="#tab-complaint" role="tab" aria-selected="false">
+															Complaint
+														</a>
+													</li>
+													<li class="nav-item">
 														<a class="nav-link" data-toggle="tab" href="#tab-kehadiran" role="tab" aria-selected="false">
 															Kehadiran
 														</a>
@@ -489,6 +494,24 @@ License: You must have a valid license purchased only from themeforest(the above
 		    											</div>
 		    										</form>
 													<table class="table table-bordered table-hover table-checkable" id="table_karyawan_treatment"></table>
+												</div>
+												<div class="tab-pane" id="tab-complaint" role="tabpanel">
+													<form class="kt-margin-b-5">
+		    											<div class="row justify-space-between">
+															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+																<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_karyawan_complaint"/>
+																<div class="input-group-append">
+																	<span class="input-group-text">
+																		<i class="la la-calendar"></i>
+																	</span>
+																</div>
+															</div>
+															<div class="col-lg-4 col-sm-6">
+			    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_complaint">
+															</div>
+		    											</div>
+		    										</form>
+													<table class="table table-bordered table-hover table-checkable" id="table_karyawan_complaint"></table>
 												</div>
 												<div class="tab-pane" id="tab-kehadiran" role="tabpanel">
 													<form class="kt-margin-b-5">
